--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
       - name: version
         run: echo "::set-output name=version::$(cat ./version.txt)"
         id: version
+      - name: create stuff
+        run: ls -alFR > a.txt
       - name: release
         uses: actions/create-release@v1
         id: create_release
