--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,8 @@ jobs:
       GITHUB_TOKEN: ${{ github.token }}
     with:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
-      asset_path: ./bin/azblogfilter.darwin-amd64.tar.gz
-      asset_name: azblogfilter.darwin-amd64.tar.gz
-      asset_content_type: application/gzip
+      asset_path: a.txt
+      asset_name: a.txt
+      # asset_content_type: application/gzip
+      asset_content_type: text/plain
+
